5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1593_1803.log
== TEST (2019-04-03 16:48:53) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1000)
p2 = int(p1%10)
print(p2)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:49:26) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//10)
p2 = int(p1%10)
print(p2)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:49:52) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
print(p2)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:52:07) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
n1 =int(x//10)
n2 = int(n1%10)
print(n2)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:53:54) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
n1 =int(x//10)
n2 = int(n1%10)
t1= int(x//100)
t2= int(t1%10)
print(t2)

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:55:56) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
n1 =int(x//10)
n2 = int(n1%10)
t1= int(x//100)
t2= int(t1%10)
m1= int(x//100)
m2=int(m1%10)
print(m2)

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:56:15) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
n1 =int(x//10)
n2 = int(n1%10)
t1= int(x//100)
t2= int(t1%10)
m1= int(x//1000)
m2=int(m1%10)
print(m2)

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:02:33) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*4
soma = r1+r2+r3+r4
print(soma)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:03:02) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma = r1+r2+r3+r4
print(soma)

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:04:19) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma = r1+r2+r3+r4
y= soma*11%
print(y)

-- ERROR:
File "XXXX", line 18
    y= soma*11%
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:04:41) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma = r1+r2+r3+r4
y = soma * 11%
print(y)

-- ERROR:
File "XXXX", line 18
    y = soma * 11%
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:06:35) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma = r1+r2+r3+r4
y = int(soma * 11%)
print(y)

-- ERROR:
File "XXXX", line 18
    y = int(soma * 11%)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:07:08) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma = r1+r2+r3+r4
v = int(soma * 11%)
print(v)

-- ERROR:
File "XXXX", line 18
    v = int(soma * 11%)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:07:18) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma = r1+r2+r3+r4
v = int(soma * 11 %)
print(v)

-- ERROR:
File "XXXX", line 18
    v = int(soma * 11 %)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:14:52) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma = r1+r2+r3+r4
v = int(soma//11 %)
print(v)

-- ERROR:
File "XXXX", line 18
    v = int(soma//11 %)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 17:15:48) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma // 11 %)
print(v)

-- ERROR:
File "XXXX", line 18
    v = int(soma // 11 %)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:43:20) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.5)#tirar porcentagem ta td ce 
print(v)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:44:14) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.101)#tirar porcentagem ta td ce 
print(v)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:45:53) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.11)#tirar porcentagem ta td ce 
print(v)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:46:38) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.12)#tirar porcentagem ta td ce 
print(v)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 20:46:57) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.12)#tirar porcentagem ta td ce 
print(v)

-- EXECUTION TIME:
0.15567
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 20:47:47) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.11)#tirar porcentagem ta td ce 
print(v)

-- EXECUTION TIME:
0.195451
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
5
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:47:50) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.11)#tirar porcentagem ta td ce 
print(v)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 20:48:05) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.11)#tirar porcentagem ta td ce 
print(v)

-- EXECUTION TIME:
0.146214
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
5
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:48:29) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.102)#tirar porcentagem ta td ce 
print(v)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:00:13) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.102)#tirar porcentagem ta td ce 
print(v)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:00:42) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.12)#tirar porcentagem ta td ce 
print(v)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:01:01) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.12)#tirar porcentagem ta td ce 
print(v)

-- EXECUTION TIME:
0.199387
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:58:03) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.12)#tirar porcentagem ta td ce 
print(round(v ,2))

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 11:58:13) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.12)#tirar porcentagem ta td ce 
print(round(v ,2))

-- EXECUTION TIME:
0.192303
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:58:21) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = (soma*0.12)#tirar porcentagem ta td ce 
print(round(v ,2))

-- OUTPUT:
1.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 11:58:39) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = (soma*0.12)#tirar porcentagem ta td ce 
print(round(v ,2))

-- EXECUTION TIME:
0.137933
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
1.2
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6.0
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
1.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:58:52) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.11)#tirar porcentagem ta td ce 
print(round(v ,2))

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 11:59:05) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.11)#tirar porcentagem ta td ce 
print(round(v ,2))

-- EXECUTION TIME:
0.118445
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
5
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:59:42) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = int(soma*0.11)#tirar porcentagem ta td ce 
print(round(v ,1))

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:00:22) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = (soma*0.11)#tirar porcentagem ta td ce 
print(round(v ,1))

-- OUTPUT:
1.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:00:38) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = (soma*0.11)#tirar porcentagem ta td ce 
print(round(v ,0))

-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:00:54) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = (soma*0.11)#tirar porcentagem ta td ce 
print(round(v ,0))

-- EXECUTION TIME:
0.235048
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
1.0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6.0
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:01:37) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = (soma*0.11)#tirar porcentagem ta td ce 
print(int(round(v ,0)))

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:01:47) 
-- CODE:
x = int(input("numero do cartao"))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = (soma*0.11)#tirar porcentagem ta td ce 
print(int(round(v ,0)))

-- EXECUTION TIME:
0.153483
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:36:52) 
-- CODE:
x = int(input("numero do cartao: "))
p1 = int(x//1)
p2 = int(p1%10)
r1= p2*2

n1 =int(x//10)
n2 = int(n1%10)
r2= n2*3

t1= int(x//100)
t2= int(t1%10)
r3= t2*4

m1= int(x//1000)
m2=int(m1%10)
r4= m2*5
soma= r1+r2+r3+r4
v = (soma*0.11)  
print(int(round(v ,0)))

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:43:25) 
-- CODE:
x = int(input("numero do cartao: ")

a = x//1000
b = x//100%10
c = x//10%10
d = x%10
soma= 
v = (soma*0.11)  
print(a,b,c,d)

-- ERROR:
File "XXXX", line 3
    a = x//1000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:43:36) 
-- CODE:
x = int(input("numero do cartao: "))

a = x//1000
b = x//100%10
c = x//10%10
d = x%10
soma= 
v = (soma*0.11)  
print(a,b,c,d)

-- ERROR:
File "XXXX", line 7
    soma= 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:43:55) 
-- CODE:
x = int(input("numero do cartao: "))

a = x//1000
b = x//100%10
c = x//10%10
d = x%10
#soma= 
#v = (soma*0.11)  
print(a,b,c,d)

-- OUTPUT:
2 0 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:48:31) 
-- CODE:
x = int(input("numero do cartao: "))

a = x//1000
b = x//100%10
c = x//10%10
d = x%10

m = a * 5
n = b*4
o = c*3
p = d*2
s= m+n+o+p 
v = (s*0.11)  
print(v)

-- OUTPUT:
1.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:48:56) 
-- CODE:
x = int(input("numero do cartao: "))

a = x//1000
b = x//100%10
c = x//10%10
d = x%10

m = a * 5
n = b*4
o = c*3
p = d*2
s= m+n+o+p 
v = (s*0.11)  
print(int(v))

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:49:58) 
-- CODE:
x = int(input("numero do cartao: "))

a = x//1000
b = x//100%10
c = x//10%10
d = x%10

m = a * 5
n = b*4
o = c*3
p = d*2
s= m+n+o+p 
v = (s%11)  
print(v)

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:50:20) 
-- CODE:
x = int(input("numero do cartao: "))

a = x//1000
b = x//100%10
c = x//10%10
d = x%10

m = a * 5
n = b*4
o = c*3
p = d*2
s= m+n+o+p 
v = (s%11)  
print(v)

-- EXECUTION TIME:
0.238635
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
